# dj_maintenance

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: dj-maintenance.yml  dj_maintenance_publish.yml  dj_maintenance_test_python.yml
dj-maintenance/: apps.py  urls.py  views.py
dj-maintenance/templates/dj-maintenance/: index.html
dj_maintenance/: apps.py  urls.py  views.py
dj_maintenance/templates/dj_maintenance/: index.html
maintenance/: urls.py
maintenance/templates/maintenance/: index.html
