[metadata]
name = dj-maintenance
version = 0.1-beta
description = A django app to conduct sheduled maintenance.
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://djmaintenance.ayumefrancis.com/
author = Ayume Francis
author_email = admin@ayumefrancis.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
